2001-07-21  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Tags): Added uref to global tags.

2001-07-21  Tim Van Holder  <tim.van.holder@pandora.be>

	* automake.in (handle_single_transform_list): Use $(DEPDIR)
	instead of hardcoding '.deps'.
	* m4/depend.m4 (AM_SET_DEPDIR): Sync with libtool's libdir check.

2001-07-20  Derek Price  <dprice@collab.net>

	* m4/header.m4 (AM_CONFIG_HEADER): Create stamp-h files in the correct
	locations.
	* tests/dirname.test: New test.
	* tests/stamph2.test: New test.
	* tests/Makefile.am: Add new tests.
	* tests/Makefile.in: Regenerated.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Tags): Document GTAGS_ARGS.
	* lib/am/tags.am (GTAGS): Added GTAGS_ARGS.  From Shigio Yamaguchi.

2001-07-19  Tom Tromey  <tromey@redhat.com>
            Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for ccnoco.test, subobj8.test:
	* m4/Makefile.am (m4data_DATA): Added auxdir.m4.
	* tests/Makefile.am (XFAIL_TESTS): Removed ccnoco.test,
	subobj8.test.
	* m4/minuso.m4 (AM_PROG_CC_C_O): Use absolute path to compile.
	Use AM_AUX_DIR_EXPAND.
	* lib/compile: Handle case where `-o' argument is the name of an
	executable, not an object file.
	* m4/auxdir.m4: New file, from...
	* m4/missing.m4: ... here.  Moved AM_AUX_DIR_EXPAND.
	* automake.in (handle_single_transform_list, lang_c_rewrite):
	Require compile using `require_config_file'.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Program and Library Variables): Added X example
	for _LDADD.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Distributing): Updated to reflect new license.

2001-07-18  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (require_build_directory): New function, extracted
	from ...
	(handle_single_transform_list): ... here.
	(require_build_directory_maybe): New function.
	(handle_prograns, handle_libraries, handle_ltlibraries): Call
	require_build_directory_maybe() to ensure the subdirectory