@@ -1385,6 +1385,11 @@ Searches for the program @code{emacs}, and, if found, sets the output
 variable @code{lispdir} to the full path to Emacs' site-lisp directory.
 @cvindex AM_PATH_LISPDIR
 
+@item AM_PROG_AS
+Use this macro when you have assembly code in your project.  This will
+choose the assembler for you (by default the C compiler), and will set
+@code{ASFLAGS} if required.
+
 @item AM_PROG_CC_C_O
 This is like @code{AC_PROG_CC_C_O}, but it generates its results in the
 manner required by automake.  You must use this instead of
@@ -1662,6 +1667,7 @@ to build programs and libraries.
 * Program variables::           Variables used when building a program
 * Yacc and Lex::                Yacc and Lex support
 * C++ Support::
+* Assembly Support::
 * Fortran 77 Support::
 * Java Support::
 * Support for Other Languages::
@@ -2307,7 +2313,7 @@ These defines work for @code{bison}, @code{byacc}, and traditional
 covered here, please report the new name so it can be added to the list.
 
 
-@node C++ Support, Fortran 77 Support, Yacc and Lex, Programs
+@node C++ Support, Assembly Support, Yacc and Lex, Programs
 @section C++ Support
 
 @cindex C++ support
@@ -2338,7 +2344,25 @@ The command used to actually link a C++ program.
 @end vtable
 
 
-@node Fortran 77 Support, Java Support, C++ Support, Programs
+@node Assembly Support, Fortran 77 Support, C++ Support, Programs
+@section Assembly Support
+
+Automake includes some support for assembly code.
+
+The variable @code{AS} holds the name of the compiler used to build
+assembly code.  This compiler must work a bit like a C compiler; in
+particular it must accept @samp{-c} and @samp{-o}.  The value of
+@code{ASFLAGS} is passed to the compilation.
+@vindex AS
+@vindex ASFLAGS
+
+You are required to set @code{AS} and @code{ASFLAGS} via
+@file{configure.in}.  The autoconf macro @code{AM_PROG_AS} will do this
+for you.  Unless they are already set, it simply sets @code{AS} to the C
+compiler and @code{ASFLAGS} to the C compiler flags.
+
+
+@node Fortran 77 Support, Java Support, Assembly Support, Programs
 @comment  node-name,  next,  previous,  up
 @section Fortran 77 Support
 
