@@ -1,7 +1,7 @@
 ## Process this file with automake to create Makefile.in
 
 m4datadir = $(datadir)/aclocal
-m4data_DATA = auxdir.m4 ccstdc.m4 cond.m4 depend.m4 depout.m4 \
+m4data_DATA = as.m4 auxdir.m4 ccstdc.m4 cond.m4 depend.m4 depout.m4 \
 dmalloc.m4 error.m4 gcj.m4 header.m4 init.m4 lex.m4 lispdir.m4 make.m4 \
 maintainer.m4 minuso.m4 missing.m4 multi.m4 obstack.m4 protos.m4 \
 ptrdiff.m4 python.m4 regex.m4 sanity.m4 strip.m4 strtod.m4 termios.m4 \
