@@ -1,5 +1,10 @@
 2001-07-21  Tom Tromey  <tromey@redhat.com>
 
+	* automake.texi (Macros): Document AM_PROG_AS.
+	(Assembly Support): New node.
+	* m4/Makefile.am (m4data_DATA): Added as.m4.
+	* m4/as.m4: New file.
+
 	* automake.texi (Tags): Added uref to global tags.
 
 2001-07-21  Tim Van Holder  <tim.van.holder@pandora.be>
